Fix vertical alignment of logo on mobile

--- a/static/js/slides/power-sources-breakdown/styles/slide-power-sources.scss
+++ b/static/js/slides/power-sources-breakdown/styles/slide-power-sources.scss
@@ -1,7 +1,7 @@
 .power-sources-logo, .power-sources-logo > svg {
-    max-height: 4rem;
-    width: 3.8rem; 
-    margin: auto;
+    height: 4rem;
+    max-width: 4rem; 
+    margin: auto
 }
 
 .power-sources-power-source .value {
